--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-portf-96x96.webp" type="image/x-icon">
+  <link rel="canonical" href="https://kunalshende.me/" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/logo-portf-96x96.webp">
+  <link rel="apple-touch-icon" href="/assets/images/logo-portf-96x96.webp">
 
+  
   <title>Kunal Shende | Cybersecurity & IoT Developer</title>
   <meta name="description" content="Portfolio of Kunal Shende, a CSE student at SBJITMR specializing in Ethical Hacking, IoT security, and Python development. Explore my latest technical projects and labs.">
   <meta name="keywords" content="Kunal Shende, Cybersecurity, IoT, ESP32, Python, Ethical Hacking, SBJITMR, Portfolio">
